src/test/deca/syntax/invalid/while-conditionWithoutParenthesis.deca
{
    while 4 == 5 {
    }
}